--- a/paxos-advisory-locks/pom.xml
+++ b/paxos-advisory-locks/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>paxos-advisory-locks</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>paxos-advisory-locks</name>
-    <url>https://github.com/trex-paxos/trex2</url>
+    <url>https://github.com/trex-paxos/trex-paxos-jvm</url>
     <description>
         Advisory locks are application-level locks that allow developers to coordinate access to shared resources across multiple database sessions. They are explicitly controlled by the application code, unlike standard database locks
     </description>
