--- a/paxos-advisory-locks/pom.xml
+++ b/paxos-advisory-locks/pom.xml
@@ -18,6 +18,12 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <properties>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
+        <maven.compiler.release>23</maven.compiler.release>
+        <maven.compiler.args>--enable-preview</maven.compiler.args>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>net.jqwik</groupId>
@@ -42,9 +48,10 @@
             <version>2.3.232</version>
         </dependency>
         <dependency>
-            <groupId>com.github.trex-paxos</groupId>
-            <artifactId>trex2-lib</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>1.11.3</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
